fix(build): Specify Jekyll theme directly
Instead of through a macro.
GitHub pages stopped building when I added the favicon,
for no reason that I can see, with an error:
File to import not found or unreadable: slate
Let's see if this fixes anything.
NOTE: I have no idea what I'm doing.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+@import "jekyll-theme-slate";
 
 p {
     overflow-wrap:break-word;
